# segmentyourpathoslidesonalaptop

./: ConvertGeoJsonToNumpy.py  ConvertSegmentationArray.py  GetTissueMask.py  Inference.py  InferenceTry1.py  InferenceTry2.py  README.md  finetuning.py  pyproject.toml  requirements.txt
