[project]
name = "pathology-finetuning-framework"
version = "0.1.0"
description = "A lightweight finetuning and inference framework for pathology whole-slide images."
authors = [
    { name = "Maximilian Fischer", email = "maximilian.fischer@dkfz-heidelberg.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Core dependencies extracted from your scripts
dependencies = [
    # --- deep learning ---
    "torch>=2.0",
    "torchvision>=0.15",

    # --- image and WSI handling ---
    "openslide-python",
    "pillow",
    "numpy",
    "opencv-python",
    "scikit-image",
    "matplotlib",

    # --- SAM / MedSAM ---
    # Needs segment-anything local or pip package depending on your install
    "git+https://github.com/facebookresearch/segment-anything.git",

    # --- utilities ---
    "tqdm",
    "cv2geojson",        # required in ConvertSegmentationArray.py
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]